--- a/Swift_Food/Base.lproj/Main.storyboard
+++ b/Swift_Food/Base.lproj/Main.storyboard
@@ -17,25 +17,75 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Q8g-0s-kpn">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Q8g-0s-kpn">
                                 <rect key="frame" x="0.0" y="44" width="414" height="686"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YkV-Xv-jB0">
-                                    <size key="itemSize" width="128" height="128"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YkV-Xv-jB0">
+                                    <size key="itemSize" width="414" height="666"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="iWT-ED-7GA">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingCollectionViewCell" id="iWT-ED-7GA" customClass="OnboardingCollectionViewCell" customModule="Swift_Food" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="10" width="414" height="666"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mtN-sg-acX">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="666"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E9p-Ci-cMa">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="558"/>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="gXv-iB-KWW">
+                                                    <rect key="frame" x="16" y="558" width="382" height="92"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="당신의 음식을 빠르게 배달합니다." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LAK-45-Tbl">
+                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="35"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="29"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="당신의 주문은 언제나 옳고 당신의 초이스는 언제나 바르고 당신의 집에는 언제나빠르다" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="we4-vx-kSZ">
+                                                            <rect key="frame" x="0.0" y="51" width="382" height="41"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="LAK-45-Tbl" firstAttribute="top" secondItem="gXv-iB-KWW" secondAttribute="top" id="IQl-jt-0rV"/>
+                                                        <constraint firstItem="LAK-45-Tbl" firstAttribute="leading" secondItem="gXv-iB-KWW" secondAttribute="leading" id="Lge-Tq-p1I"/>
+                                                        <constraint firstAttribute="trailing" secondItem="LAK-45-Tbl" secondAttribute="trailing" id="Po2-Vd-7oa"/>
+                                                        <constraint firstAttribute="trailing" secondItem="we4-vx-kSZ" secondAttribute="trailing" id="YcN-7B-33j"/>
+                                                        <constraint firstAttribute="bottom" secondItem="we4-vx-kSZ" secondAttribute="bottom" id="ozJ-8h-oHa"/>
+                                                        <constraint firstItem="we4-vx-kSZ" firstAttribute="leading" secondItem="gXv-iB-KWW" secondAttribute="leading" id="vmf-LO-ygM"/>
+                                                        <constraint firstItem="we4-vx-kSZ" firstAttribute="top" secondItem="LAK-45-Tbl" secondAttribute="bottom" constant="16" id="zjQ-1S-9nf"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="gXv-iB-KWW" secondAttribute="bottom" constant="16" id="0pl-3u-Rom"/>
+                                                <constraint firstItem="E9p-Ci-cMa" firstAttribute="leading" secondItem="mtN-sg-acX" secondAttribute="leading" id="6a5-Q6-RaJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="E9p-Ci-cMa" secondAttribute="trailing" id="Hhx-Ep-3p3"/>
+                                                <constraint firstItem="E9p-Ci-cMa" firstAttribute="top" secondItem="mtN-sg-acX" secondAttribute="top" id="Ovd-1B-ZcU"/>
+                                                <constraint firstItem="gXv-iB-KWW" firstAttribute="top" secondItem="E9p-Ci-cMa" secondAttribute="bottom" id="TrO-3A-MWA"/>
+                                                <constraint firstItem="gXv-iB-KWW" firstAttribute="leading" secondItem="mtN-sg-acX" secondAttribute="leading" constant="16" id="tWF-qa-Qzt"/>
+                                                <constraint firstAttribute="trailing" secondItem="gXv-iB-KWW" secondAttribute="trailing" constant="16" id="zhk-9k-uPW"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="414" height="666"/>
+                                        <connections>
+                                            <outlet property="slideDescriptionLbl" destination="we4-vx-kSZ" id="e8D-G5-Pi1"/>
+                                            <outlet property="slideImageView" destination="E9p-Ci-cMa" id="g40-hZ-Dyj"/>
+                                            <outlet property="slideTitleLbl" destination="LAK-45-Tbl" id="tu9-An-N5P"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="VqM-zp-RUX"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zDk-gd-o85"/>
+                                </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z7y-G3-Sfm">
                                 <rect key="frame" x="132" y="772" width="150" height="50"/>
@@ -45,7 +95,7 @@
                                     <constraint firstAttribute="height" constant="50" id="yCV-Um-Lvo"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Next">
+                                <state key="normal" title="다음">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -57,8 +107,8 @@
                                     <action selector="nextBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nrt-iu-sYh"/>
                                 </connections>
                             </button>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="JFv-LZ-uk1">
-                                <rect key="frame" x="149" y="730" width="116" height="26"/>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="JFv-LZ-uk1">
+                                <rect key="frame" x="149.5" y="730" width="115.5" height="26"/>
                                 <color key="pageIndicatorTintColor" systemColor="systemGray5Color"/>
                                 <color key="currentPageIndicatorTintColor" red="0.87825995680000002" green="0.22658047079999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </pageControl>
@@ -86,6 +136,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jvk-NA-Kxu">
+            <objects>
+                <viewController id="Yoc-R0-VU6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JwQ-uq-svB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="yhR-bb-URZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Aoi-Rg-mKY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Npq-IS-j1V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1684" y="110"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="twu-4q-8su">
+            <objects>
+                <navigationController storyboardIdentifier="HomeNC" automaticallyAdjustsScrollViewInsets="NO" id="X6d-O4-OXF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rfE-gN-T4R">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Yoc-R0-VU6" kind="relationship" relationship="rootViewController" id="F0A-J3-Eps"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q0f-hn-aLz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="938" y="110"/>
         </scene>
     </scenes>
     <resources>
