popular collection, dish model,int값을 string으로 반환

--- a/Swift_Food/Base.lproj/LaunchScreen.storyboard
+++ b/Swift_Food/Base.lproj/LaunchScreen.storyboard
@@ -26,8 +26,8 @@
                                             <constraint firstAttribute="height" constant="200" id="uMx-4V-dyp"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yummie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wwh-V4-XKN">
-                                        <rect key="frame" x="45" y="226" width="110" height="40.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="집밥보다 맛있어" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wwh-V4-XKN">
+                                        <rect key="frame" x="2.5" y="226" width="195.5" height="40.5"/>
                                         <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="31"/>
                                         <color key="textColor" red="0.87825995680000002" green="0.22658047079999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
