DishesList, detail, category custom

--- a/Swift_Food/Base.lproj/Main.storyboard
+++ b/Swift_Food/Base.lproj/Main.storyboard
@@ -418,6 +418,40 @@
             </objects>
             <point key="canvasLocation" x="1682.608695652174" y="765.40178571428567"/>
         </scene>
+        <!--List Dishes View Controller-->
+        <scene sceneID="TyA-R2-sA3">
+            <objects>
+                <viewController storyboardIdentifier="ListDishesViewController" id="tko-e1-kvI" customClass="ListDishesViewController" customModule="Swift_Food" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M95-9L-Agg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="P2a-O5-Tap">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="tko-e1-kvI" id="pWn-op-ptg"/>
+                                    <outlet property="delegate" destination="tko-e1-kvI" id="xaI-mh-jMu"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Nxu-Oh-hBh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="P2a-O5-Tap" firstAttribute="trailing" secondItem="Nxu-Oh-hBh" secondAttribute="trailing" id="1PH-Tu-M6q"/>
+                            <constraint firstItem="P2a-O5-Tap" firstAttribute="leading" secondItem="Nxu-Oh-hBh" secondAttribute="leading" id="cEj-MV-aaI"/>
+                            <constraint firstItem="P2a-O5-Tap" firstAttribute="top" secondItem="Nxu-Oh-hBh" secondAttribute="top" id="ggO-kG-tSH"/>
+                            <constraint firstItem="P2a-O5-Tap" firstAttribute="bottom" secondItem="Nxu-Oh-hBh" secondAttribute="bottom" id="jHA-lR-yHZ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="P2a-O5-Tap" id="0GG-kO-6Yc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L6F-IS-Ovt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2366.666666666667" y="765.40178571428567"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="twu-4q-8su">
             <objects>
